--- a/app/src/main/res/layout/attac_st_listview.xml
+++ b/app/src/main/res/layout/attac_st_listview.xml
@@ -23,42 +23,51 @@
             <TextView
                 android:id="@+id/stTable_num"
                 android:layout_width="0dp"
+                android:layout_height="25dp"
                 android:layout_weight="10"
-                android:layout_height="22dp"
                 android:gravity="center"
-                android:text="N" />
+                android:text="N"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/stTable_hit_modifier"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="25dp"
                 android:layout_weight="20"
+                android:gravity="center_vertical"
                 android:paddingStart="5dp"
                 android:paddingEnd="2dp"
-                android:text="Hit" />
+                android:text="Hit"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/stTable_damage"
                 android:layout_width="0dp"
-                android:layout_weight="40"
                 android:layout_height="match_parent"
+                android:layout_weight="40"
+                android:gravity="center_vertical"
                 android:paddingStart="5dp"
-                android:text="Damage" />
+                android:text="Damage"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/stTable_attack_name"
                 android:layout_width="0dp"
-                android:layout_weight="20"
                 android:layout_height="match_parent"
+                android:layout_weight="20"
+                android:gravity="center_vertical"
                 android:paddingStart="5dp"
-                android:text="Name" />
+                android:text="Name"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="25dp"
                 android:layout_weight="20"
+                android:gravity="center_vertical"
                 android:paddingStart="3dp"
-                android:text="Clean" />
+                android:text="Clear"
+                android:textSize="16sp" />
         </TableRow>
 
         <TableRow
