--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -281,7 +281,6 @@
                             android:paddingBottom="10dp"
                             android:text="1 x"
                             android:textAlignment="gravity"
-                            android:textSize="12sp"
                             app:autoSizeMinTextSize="20dp" />
 
 
@@ -318,8 +317,7 @@
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
                             android:text="0 ="
-                            android:textAlignment="gravity"
-                            android:textSize="14sp" />
+                            android:textAlignment="gravity" />
 
                         <TextView
                             android:id="@+id/answer1"
